# esp_simplefoc

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
Doc/: foc_introduction.md  如何简单的在项目中添加 CI.md
Doc/xmind/: 电机分类.xmind
port/angle_sensor/: as5600.cpp  as5600.h  sensor_as5600.c  sensor_as5600.h
port/arduino/: Print.cpp  Stream.cpp  WString.cpp
port/arduino/include/: Arduino.h  Print.h  Stream.h  WCharacter.h  WString.h
port/esp/: esp-fast-math.cpp  esp-hal-adc.cpp  esp-hal-gpio.cpp  esp-hal-mcpwm.cpp  esp-hal-misc.cpp  esp-hal-serial.cpp  esp_app_fmath.cpp  esp_app_print.cpp  esp_hal_adc.cpp  esp_hal_bldc_3pwm.cpp  esp_hal_bldc_6pwm.cpp  esp_hal_gpio.cpp  esp_hal_mcpwm.cpp  esp_hal_misc.cpp  esp_hal_serial.cpp
port/esp/include/: esp-hal-adc.h  esp-hal-gpio.h  esp-hal-mcpwm.h  esp-hal-misc.h  esp-hal-serial.h  esp_app_print.h  esp_bldc_3pwm.h  esp_hal_adc.h  esp_hal_bldc_6pwm.h  esp_hal_gpio.h  esp_hal_mcpwm.h  esp_hal_misc.h  esp_hal_serial.h  esp_platform.h  esp_simplefoc.h
test_apps/: sdkconfig  sdkconfig.old
test_apps/main/: test_esp_simplefoc.cpp
